<resources>
    <string name="app_name">activity_login</string>
    <string name="activity_example_btn1">Click</string>
    <string name="activity_example_hint">Hint</string>
    <string name="activity_example_firstName">First Name</string>
    <string name="activity_example_lastName">Last Name</string>
    <string name="activity_example_idNumber">ID Number</string>
    <string name="activity_example_course">Course</string>
    <string name="activity_example_year">Year</string>

</resources>