<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityExample"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/activity_example_firstName"
        android:id="@+id/firstName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/activity_example_lastName"
        android:id="@+id/lastName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/activity_example_idNumber"
        android:id="@+id/idNumber"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/activity_example_course"
        android:id="@+id/course"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/activity_example_year"
        android:id="@+id/year"/>

    <TextView
        android:id="@+id/studentInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/activity_example_btn1"
        android:id="@+id/btnClick"/>


</LinearLayout>